update css to fix header image bug
the header image started to overlap the main page for whatever reason, this should fix it.

--- a/static/styles.css
+++ b/static/styles.css
@@ -30,7 +30,7 @@ body {
 }
 
 .head-title img {
-  height: 100%;
+  height: 100px;
 }
 
 .login {
